--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -20,8 +20,8 @@
                 android:resource="@drawable/preview_digital_circular" />
 
             <intent-filter>
+                <action android:name="com.google.android.gms.wearable.DATA_CHANGED" />
                 <action android:name="android.service.wallpaper.WallpaperService" />
-
                 <category android:name="com.google.android.wearable.watchface.category.WATCH_FACE" />
             </intent-filter>
         </service>
